changed background image height to 100% on signup page to prevent white spacing on larger screens

--- a/assets/style.css
+++ b/assets/style.css
@@ -269,6 +269,7 @@ margin-bottom: 5px;
 .signup-image{
     background-image: url(../assets/images/signup/sharksbackground.jpg);
     background-size: cover;
+    height: 100%;
 }
 
 .form-section{
